# django-ninja-ts

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
django_ninja_ts/: __init__.py  apps.py
django_ninja_ts/management/commands/: runserver.py
docs/plans/: 2026-01-23-openapi-ts-client-migration-design.md  2026-01-23-openapi-ts-client-migration.md
tests/: __init__.py  settings.py  test_runserver.py
