[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ninja-ts"
dynamic = ["version"]
description = "Auto-generate TypeScript clients for Django Ninja during runserver"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Django Ninja TS Contributors"}
]
keywords = ["django", "ninja", "typescript", "openapi", "codegen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "Django>=4.0",
    "django-ninja>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-mock>=3.10",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/fa-krug/django-ninja-ts"
Repository = "https://github.com/fa-krug/django-ninja-ts"
Issues = "https://github.com/fa-krug/django-ninja-ts/issues"

[tool.setuptools.packages.find]
include = ["django_ninja_ts*"]

[tool.setuptools.dynamic]
version = {attr = "django_ninja_ts.__version__"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["django_ninja_ts", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["django_ninja_ts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
